# atendai

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  GUIDELINES.md  SPRINTS.md
migrations/: env.py
migrations/versions/: 326cf0ad4802_create_initial_tables.py
src/api/: main.py
src/config/: database.py  settings.py
src/domain/: models.py  orm.py
src/gateways/: interfaces.py
tests/: conftest.py  mocks.py
tests/unit/domain/: test_models.py
